[workspace]
members = ["httpsig", "httpsig-hyper"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.4"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/httpsig-rs"
repository = "https://github.com/junkurihara/httpsig-rs"
readme = "README.md"
license = "MIT"
rust-version = "1.75.0"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
