[package]
name = "httpsig-hyper"
version.workspace = true
edition.workspace = true
description = "Hyper extension for http message signatures (RFC9421)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpsig = { path = "../httpsig", version = "0.0.16" }

thiserror = { version = "1.0.63" }
tracing = { version = "0.1.40" }
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "async-await",
] }
indexmap = { version = "2.4.0" }

# content digest with rfc8941 structured field values
sha2 = { version = "0.10.8", default-features = false }
sfv = { version = "0.9.4" }

# encoding
base64 = { version = "0.22.1" }

# for request and response headers
http = { version = "1.1.0" }
http-body = { version = "1.0.1" }
http-body-util = { version = "0.1.2" }
bytes = { version = "1.7.1" }


[dev-dependencies]
tokio = { version = "1.39.3", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] } # testing only
