[package]
name = "httpsig-hyper"
version.workspace = true
edition.workspace = true
description = "Hyper extension for http message signatures (RFC9421)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpsig = { path = "../httpsig", version = "0.0.17" }

thiserror = { version = "2.0.11" }
tracing = { version = "0.1.41" }
futures = { version = "0.3.31", default-features = false, features = [
  "std",
  "async-await",
] }
indexmap = { version = "2.7.1" }

# content digest with rfc8941 structured field values
sha2 = { version = "0.10.8", default-features = false }
sfv = { version = "0.10.4" }

# encoding
base64 = { version = "0.22.1" }

# for request and response headers
http = { version = "1.2.0" }
http-body = { version = "1.0.1" }
http-body-util = { version = "0.1.2" }
bytes = { version = "1.10.0" }


[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] } # testing only
