[package]
name = "httpsig-hyper"
version.workspace = true
edition.workspace = true
description = "Hyper extension for http message signatures (RFC9421)"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
blocking = ["futures/executor"]
rsa-signature = ["httpsig/rsa-signature"]


[dependencies]
httpsig = { path = "../httpsig", version = "0.0.22" }

thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
futures = { version = "0.3.31", default-features = false, features = [
  "std",
  "async-await",
] }
indexmap = { version = "2.11.4" }
subtle = { version = "2.6.1", default-features = false }

# content digest with rfc8941 structured field values
sha2 = { version = "0.10.9", default-features = false }
sfv = { version = "0.14.0" }

# encoding
base64 = { version = "0.22.1" }

# for request and response headers
http = { version = "1.4.0" }
http-body = { version = "1.0.1" }
http-body-util = { version = "0.1.3" }
bytes = { version = "1.11.1" }


[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] } # testing only
