[package]
name = "httpsig"
version.workspace = true
edition.workspace = true
description = "Implementation of IETF RFC 9421 of http message signatures"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "2.0.16" }
tracing = { version = "0.1.41" }
rustc-hash = { version = "2.1.1" }
indexmap = { version = "2.11.1" }
fxhash = { version = "0.2.1" }
rand = { version = "0.9.2" }

# crypto
pkcs8 = { version = "0.10.2", default-features = false, features = ["pem"] }
spki = { version = "0.7.3", default-features = false, features = ["pem"] }
sec1 = { version = "0.7.3", default-features = false, features = ["der"] }
ed25519-compact = { version = "2.1.1", default-features = false, features = [
  "random",
] }
ecdsa = { version = "0.16.9", default-features = false, features = [
  "arithmetic",
] }
p256 = { version = "0.13.2", default-features = false, features = [
  "arithmetic",
  "ecdsa",
] }
p384 = { version = "0.13.1", default-features = false, features = [
  "arithmetic",
  "ecdsa",
] }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9", default-features = false }
bytes = { version = "1.10.1" }

# encoding
base64 = { version = "0.22.1" }

# for rfc8941 structured field values
sfv = { version = "0.10.4" }

[dev-dependencies]
rand-085 = { package = "rand", version = "0.8.5" } # testing only
